--- a/.gitignore
+++ b/.gitignore
@@ -137,4 +137,12 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-data/
+.virtual_documents/
+.vscode/
+data/glove.6B.50d.txt
+data/glove.6B.50d.txt.zip
+data/IMDB Dataset.csv
+data/sentiment.xlsx
+data/training.1600000.processed.noemoticon.csv
+data/training.1600000.processed.noemoticon.csv.zip
+data/Twitter.rar
