--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-future>=0.16.0
-pickledb>=0.9.2
-alyahmor>=0.1
-libqutrub>=1.2.3
-naftawayh>=0.3
-pyarabic>=0.6.7
-tashaphyne>=0.3.4.1
-arramooz-pysqlite>=0.1
-Arabic-Stopwords>=0.3
+gensim==4.0.1
+PyArabic==0.6.10
+matplotlib==3.3.4
+arabic_reshaper==2.1.3
+numpy==1.17.4
+tensorflow_gpu==2.5.0
+python_bidi==0.4.2
+pandas==1.2.0
+Keras==2.4.3
+tqdm==4.56.0
+scipy==1.6.0
+scikit_learn==0.24.2
+tensorflow==2.5.0
